<resources>
    <string name="app_name">Lloyds App</string>
    <string name="api_key">93d2e2620252446abbf63a82d3c3fb81</string>
    <string name="api_base_url">https://homepages.cs.ncl.ac.uk/2014-15/csc2022_team19/api</string>
    <string name="api_auth">authenticate</string>
    <string name="api_settings">updatesettings</string>
    <string name="api_gcmid">updategcmid</string>
    <string name="api_playid">updateplayid</string>
    <string name="api_bank_account_details">bankaccountdetails</string>
    <string name="api_error_connection">Couldn\'t connect to server</string>
    <string name="profile_page">Profile</string>
    <string name="accounts_dashboard_page">Accounts Dashboard</string>
    <string name="notifications_page">Notifications</string>
    <string name="other_products_page">Other Products</string>
    <string name="feedback_page">Feedback</string>
    <string name="location_page">Location Services</string>
    <string name="account_health_page">Account Health</string>
    <string name="log_off_dialog">Log Off</string>
    <string name="settings">Settings</string>
    <string name="set_goals_page">Set Goals</string>
    <string name="account_info_page">Account Information</string>
    <string name="make_payment_page">Make a Payment</string>
    <string name="payment_confirm_page">Confirm Payment</string>
    <string name="payment_successful_page">Payment Successful</string>
    <string name="transactions_page">Transactions</string>
    <string name="transfer_funds_page">Transfer Funds</string>
    <string name="confirm_transfer_page">Confirm Transfer</string>
    <string name="transfer_successful_page">Transfer Successful</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="action_find_branches_gplaces">Find Branches</string>
    <string name="title_maps">Lloyds Branch Finder</string>
    <string name="your_loc">Your Location</string>
    <string name="loc_now">Where you are searching from right now.</string>
    <string name="error_undetermined_loc">Error: Your location could not be determined.</string>
    <string name="error_loc_svc_disabled">Your location services are disabled; please re-enable them to use this feature.</string>
    <string name="error_no_results">"No results found."</string>
    <string name="places_request_url" formatted="false">https://maps.googleapis.com/maps/api/place/nearbysearch/json?location=%f,%f&amp;radius=%d&amp;types=%s&amp;name=%s&amp;key=AIzaSyAnOqe2hy_znuRnk6pfijuHXOFBH_Z6r6M</string>
    <string name="username">UserID</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logo">App Logo</string>
    <string name="visit_website">If you don\'t want to register your device with Mobile Banking right now you can still use our mobile site.</string>
    <string name="visit_website_link"><a href="http://www.lloydsbank.com/">Visit our website</a></string>
    <string name="bundle_autokick">AUTOKICK</string>
    <string name="your_security_code">Your Security Code</string>
    <string name="enter_security_code">Please enter the indicated characters from your security code</string>
    <string name="next">Next</string>
    <string name="first">1st</string>
    <string name="second">2nd</string>
    <string name="third">3rd</string>
    <string name="make_payment">Make Payment</string>
    <string name="make_transfer">Make Transfer</string>
    <string name="confirm_payment">Confirm Payment</string>
    <string name="confirm_transfer">Confirm Transfer</string>
    <string name="payment_successful">Payment Successful</string>
    <string name="payment_failed">Payment Failed</string>
    <string name="transfer_successful">Transfer Successful</string>
    <string name="transfer_failed">Transfer Failed</string>
    <string name="account">Account</string>
    <string name="reference">Reference:</string>
    <string name="reference_opt">Reference: (optional)</string>
    <string name="reference_hint">e.g. \'Groceries\'</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="account_type">Account Type:</string>
    <string name="account_number">Account Number:</string>
    <string name="sort_code">Sort Code:</string>
    <string name="amount">Amount:</string>
    <string name="tran_continue">Continue</string>
    <string name="tran_cancel">Cancel</string>
    <string name="tran_confirm">Confirm</string>
    <string name="back_to_account">Back To Account</string>
    <string name="transfer_failed_info">Sorry, your transfer has failed. Please check all the account details and try again. </string>
    <string name="payment_failed_info">Sorry, your payment has failed. Please check all the account details and try again. </string>
    <string name="tag">Tag:</string>
    <string name="tag_appear">(The tag will appear in your history)</string>
    <string name="logoff">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="dismiss">Dismiss</string>
    <string name="action_help">Help</string>
    <string name="rating_prompt">Rate your experience:</string>
    <string name="rating_feedback">Provide feedback about the application:</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="submit_success">Your feedback was successfully submitted.</string>
    <string name="team_email">team.19.service@gmail.com</string>
    <string name="error_form">Please ensure you have given a rating or some feedback.</string>
    <string name="error_email">A network error when attempting to send the email occurred.</string>
    <string name="email_subject">Feedback Form</string>
    <string name="rating">RATING: </string>
    <string name="feedback">FEEDBACK: </string>
    <string name="back_to_profile">Back to Profile</string>
    <string name="app_id">689728249892</string>
    <string name="sign_in_failed">Failed to sign in. Please check your network connection and try again.</string>
    <string name="app_misconfigured">The application is incorrectly configured. Check that the package name and signing certificate match the client ID created in Developer Console. Also, if the application is not yet published, check that the account you are trying to sign in with is listed as a tester account. See logs for more information.</string>
    <string name="license_failed">License check failed.</string>
    <string name="unknown_error">Unknown error.</string>
    <string name="gamehelper_sign_in_failed">Failed to sign in. Please check your network connection and try again.</string>
    <string name="gamehelper_app_misconfigured">The application is incorrectly configured. Check that the package name and signing certificate match the client ID created in Developer Console. Also, if the application is not yet published, check that the account you are trying to sign in with is listed as a tester account. See logs for more information.</string>
    <string name="gamehelper_license_failed">License check failed.</string>
    <string name="gamehelper_unknown_error">Unknown error.</string>
    <string name="google_play_sign_in">Sign into Google Play</string>
    <string name="google_play_sign_out">Sign out from Google Play</string>
    <string name="acc_current">Current Account</string>
    <string name="acc_savings">Savings Account</string>
    <string name="acc_student">Student Account</string>
    <string name="acc_page_title">Your Accounts</string>
    <string name="int_stu_account">International Student Account</string>
    <string name="acc_nickname_filler">My Account</string>
    <string name="acc_number_filler">12345678</string>
    <string name="acc_sort_code_number_filler">00-00-00 12345678</string>
    <string name="acc_funds_filler">£999.99</string>
    <string name="account_number_info">Account Number: 12345678</string>
    <string name="account_info_balance">Balance:</string>
    <string name="account_info_sort_code">00-00-00</string>
    <string name="account_info_avail_funds">Available funds:</string>
    <string name="account_info_profile_button">Profile details</string>
    <string name="account_info_acc_button">Account details</string>
    <string name="account_info_transfer_button">Transfer funds</string>
    <string name="account_info_transac_button">Transactions</string>
    <string name="account_info_pend_button">Pending payments</string>
    <string name="account_info_make_pay_button">Make a payment</string>
    <string name="account_info_health_button">Account Health</string>
    <string name="account_info_no_accounts">You currently don\'t have any bank accounts.\n\nPlease visit your local Lloyds branch to set up a bank account.</string>
    <string name="transaction_history_title">Your Transaction History</string>
    <string name="transaction_history_select_year">Select year: </string>
    <string name="transaction_history_no_transactions">There are currently no transactions to show.</string>
    <string name="profile_name_filler">John Smith</string>
    <string name="profile_status_filler">I love Lloyds</string>
    <string name="health_page_title">Your Account\'s Health</string>
    <string name="current_goals">Current Goals</string>
    <string name="set_for">Set For:</string>
    <string name="per_month">Per Month</string>
    <string name="spend">Spend:</string>
    <string name="save">Save:</string>
    <string name="overdraft">Overdraft:</string>
    <string name="donate">Donate:</string>
    <string name="set_goals">Set Goals</string>
    <string name="set_your_goals">Set Your Goals</string>
    <string name="reset">Reset</string>
    <string name="gbp">£</string>
    <string name="your_prog">Your account health is </string>
    <string name="profile_snippet">Access your Lloyds Banking Application Profile</string>
    <string name="status">Status:</string>
    <string name="bio">Bios:</string>
    <string name="sign_into_google_play">Sign into Google Play</string>
    <string name="man_no_class">The menu is too tired to provide any help</string>
    <string name="man_profile_page">Press Health Bar to check account health percentage\n\nPress Account Dashboard to access account information\n\nPress Account Health to set goals\n\nPress Sign Into Google Play to enable scoreboard\n\nTap status/ bio to edit your own story</string>
    <string name="man_acc_dashboard">Press Current Account to manage current account\n\nPress Saving Account to manage saving account</string>
    <string name="man_current_acc">Press Transactions to view transaction history\n\nPress Make A Payment to pay bill\n\nPress Transfer funds to transfer between accounts\n\nPress Account Health to set/view goals</string>
    <string name="sp_notif_email">NOTIF_EMAIL</string>
    <string name="sp_notif_push">NOTIF_PUSH</string>
    <string name="sp_notif_wearable">NOTIF_WEARABLE</string>
    <string name="category_notif">Notification Settings</string>
    <string name="notif_email">Receive Email Notifications</string>
    <string name="notif_email_summary">Un-check this value if you wish to not receive email notifications from the Lloyds Bank.</string>
    <string name="notif_push">Receive Push Notifications</string>
    <string name="notif_push_summary">Un-check this value if you wish to not receive push notifications from the Lloyds Bank directly to your phone.</string>
    <string name="notif_wearable">Receive Wearable Notifications</string>
    <string name="notif_wearable_summary">Un-check this value if you wish to not receive notifications to your wearable device from the Lloyds bank if you have one configured.</string>
</resources>