<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LoginPage">

    <ImageView
        android:layout_width="160dp"
        android:layout_height="122dp"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal|top"
        android:background="@drawable/logo"
        android:contentDescription="@string/logo"
        android:layout_marginTop="100dp" />

    <EditText
        android:layout_width="197dp"
        android:layout_height="wrap_content"
        android:id="@+id/userID"
        android:layout_gravity="center"
        android:inputType="text"
        android:hint="@string/username" />

    <EditText
        android:layout_width="197dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText2"
        android:layout_gravity="center"
        android:hint="@string/password" />

    <Button
        android:layout_width="142dp"
        android:layout_height="35dp"
        android:text="@string/login"
        android:id="@+id/login_button"
        android:layout_gravity="center"
        android:background="#ff006846"
        android:textColor="#ffffffff"
        android:nestedScrollingEnabled="false"
        android:layout_marginTop="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgotten_password_link"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:textColor="#ff006846"
        android:textSize="@dimen/abc_text_size_body_2_material"
        android:autoLink="web"
        android:layout_marginTop="5dp" />

    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/visit_website"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textColor="#ff006846" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/visit_website_link"
        android:id="@+id/textView3"
        android:layout_gravity="center_horizontal"
        android:textColor="#ff006846"
        android:autoLink="web"
        android:textSize="@dimen/abc_text_size_medium_material"
        android:layout_marginTop="5dp" />
</LinearLayout>