<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/lloyds_darkgreen">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/logoff"
        android:id="@+id/areYouSure"
        android:textColor="#ffffffff"
        android:textAlignment="center"
        android:padding="20dp"
        android:layout_gravity="center_horizontal" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/lloyds_darkgreen"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal">
            <Button
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/yes"
                android:layout_weight="1"
                android:id="@+id/yesButton"
                android:background="@color/lloyds_lightergreen"
                android:textColor="#ffffffff"
                android:layout_marginLeft="15dp" />

            <Button
                style="?android:attr/buttonStyleSmall"

                android:text="@string/no"
                android:id="@+id/noButton"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/yesButton"
                android:background="@color/lloyds_lightergreen"
                android:textColor="#ffffffff"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp" />
        </LinearLayout>
</LinearLayout>